--- a/tests/test_cases/2018/commands/7E0.7E8.2151.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2151.yaml
@@ -433,6 +433,43 @@ test_cases:
     7E82480208310800000
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: 23
+    TOYOTA_AC_FB: 0.89844
+    TOYOTA_ELEC_LOAD_FB: 0
+    TOYOTA_ENG_SPD_START_OFF: 967.96875
+    TOYOTA_ENG_START_HESIT: 0
+    TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 73
+    TOYOTA_EOT_V3: 73
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: 0.1001
+    TOYOTA_ISC_FLOW: 10.60425
+    TOYOTA_ISC_LEARN: 6.32446
+    TOYOTA_ISC_POS: 5.92041
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: 23
+    TOYOTA_PREV_TRIP_DST: 0.49
+    TOYOTA_PREV_TRIP_EOT: 86
+    TOYOTA_PREV_TRIP_IAT: 31
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 10.24628
+    TOYOTA_VVTOT: 90
+    TOYOTA_VVT_ADV_FAIL: 0
+  response: |-
+    7E810236151000004D7
+    7E8210100318247717E
+    7E8223F3F053F21EF03
+    7E8230800008052943D
+    7E824800082E0803800
+    7E82500000000000000
+    7E804410C18B8
+    7E803410D14
+    7E80441101294
+    7E80641010007ED00
+- expected_values:
     TOYOTA_AC_AMB_T: 28
     TOYOTA_AC_FB: 0.89844
     TOYOTA_ELEC_LOAD_FB: 0.11108
