--- a/tests/test_cases/2024/commands/700.708.221041.yaml
+++ b/tests/test_cases/2024/commands/700.708.221041.yaml
@@ -1,13 +1,9 @@
 command_id: 700.708.221041
 test_cases:
 - expected_values:
-    TOYOTA_ECT_IGN: 8.75
-    TOYOTA_ECT_INIT: 86.875
-  response: 708056210414ECB
-- expected_values:
-    TOYOTA_ECT_IGN: 18.125
-    TOYOTA_ECT_INIT: 18.125
-  response: 708056210415D5D
+    TOYOTA_ECT_IGN: 0.625
+    TOYOTA_ECT_INIT: 0.625
+  response: '708056210414141'
 - expected_values:
     TOYOTA_ECT_IGN: 23.125
     TOYOTA_ECT_INIT: 94.375
