--- a/tests/test_cases/2024/commands/7D2.7DA.221075.yaml
+++ b/tests/test_cases/2024/commands/7D2.7DA.221075.yaml
@@ -33,7 +33,10 @@ test_cases:
     7DA100B62107580FE80
     7DA21CD80D5809B0000
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 41.05
     TOYOTA_FR_WHEEL_VSS: 40.85
+    TOYOTA_RL_WHEEL_VSS: 40.88
+    TOYOTA_RR_WHEEL_VSS: 40.72
   response: |-
     7DA100B6210758FF590
     7DA21098FE88FF80000
