--- a/tests/test_cases/2018/commands/7B0.7B8.2142.yaml
+++ b/tests/test_cases/2018/commands/7B0.7B8.2142.yaml
@@ -54,3 +54,9 @@ test_cases:
     TOYOTA_RL_WHEEL_ACCELERATION: 0
     TOYOTA_RR_WHEEL_ACCELERATION: 0
   response: 7B806614206000000
+- expected_values:
+    TOYOTA_FL_WHEEL_ACCELERATION: 0
+    TOYOTA_FR_WHEEL_ACCELERATION: 252
+    TOYOTA_RL_WHEEL_ACCELERATION: 0
+    TOYOTA_RR_WHEEL_ACCELERATION: 3
+  response: 7B8066142FC000300
