--- a/tests/test_cases/2018/commands/7C0.7C8.2113.yaml
+++ b/tests/test_cases/2018/commands/7C0.7C8.2113.yaml
@@ -4,6 +4,9 @@ test_cases:
     TOYOTA_BAT_V: 13
   response: 7C803611382
 - expected_values:
+    TOYOTA_BAT_V: 13.3
+  response: 7C803611385
+- expected_values:
     TOYOTA_BAT_V: 13.5
   response: 7C803611387
 - expected_values:
