--- a/tests/test_cases/2024/commands/700.708.22108D.yaml
+++ b/tests/test_cases/2024/commands/700.708.22108D.yaml
@@ -1,8 +1,11 @@
 command_id: 700.708.22108D
 test_cases:
 - expected_values:
-    TOYOTA_INTAKE_VVT_OVER_RET_LEARN_B1: 30.61522
-  response: 7080562108D0C3F
+    TOYOTA_INTAKE_VVT_OVER_RET_LEARN_B1: 29.58007
+  response: 7080562108D0BD5
 - expected_values:
-    TOYOTA_INTAKE_VVT_OVER_RET_LEARN_B1: 31.21093
-  response: 7080562108D0C7C
+    TOYOTA_INTAKE_VVT_OVER_RET_LEARN_B1: 29.99022
+  response: 7080562108D0BFF
+- expected_values:
+    TOYOTA_INTAKE_VVT_OVER_RET_LEARN_B1: 30.02929
+  response: 7080562108D0C03
