--- a/tests/test_cases/2024/commands/700.708.2210A2.yaml
+++ b/tests/test_cases/2024/commands/700.708.2210A2.yaml
@@ -43,19 +43,33 @@ test_cases:
     70810086210A28585AF
     70821AC960000000000
 - expected_values:
-    TOYOTA_AFRL_HIGH_1: 8.58824
+    TOYOTA_AFRL_HIGH_1: 11.71294
     TOYOTA_AFRL_IDLE_1: 3.90118
-    TOYOTA_AFRL_LOW_1: 3.90118
-    TOYOTA_AFRL_MID_1_1: 17.18118
-    TOYOTA_AFRL_MID_2_1: 14.83765
-    TOYOTA_AF_LEARN_HIGH_PORT_B1: 8.82353
+    TOYOTA_AFRL_LOW_1: 4.29176
+    TOYOTA_AFRL_MID_1_1: 9.76
+    TOYOTA_AFRL_MID_2_1: 9.36941
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 11.96078
     TOYOTA_AF_LEARN_IDLE_PORT_B1: 4.11765
-    TOYOTA_AF_LEARN_LOW_PORT_B1: 4.11765
-    TOYOTA_AF_LEARN_MID1_PORT_B1: 17.45098
-    TOYOTA_AF_LEARN_MID2_PORT_B1: 15.09804
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 4.5098
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 10
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 9.60784
   response: |-
-    70810086210A28A8AAC
-    70821A6960000000000
+    70810086210A28A8B99
+    70821989E0000000000
+- expected_values:
+    TOYOTA_AFRL_HIGH_1: 12.10353
+    TOYOTA_AFRL_IDLE_1: 5.46353
+    TOYOTA_AFRL_LOW_1: 4.29176
+    TOYOTA_AFRL_MID_1_1: 9.76
+    TOYOTA_AFRL_MID_2_1: 10.15059
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 12.35294
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 5.68627
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 4.5098
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 10
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 10.39216
+  response: |-
+    70810086210A28E8B99
+    708219A9F0000000000
 - expected_values:
     TOYOTA_AFRL_HIGH_1: 8.58824
     TOYOTA_AFRL_IDLE_1: 5.46353
@@ -99,16 +113,44 @@ test_cases:
     70810086210A2989AAC
     70821A9960000000000
 - expected_values:
-    TOYOTA_AFRL_HIGH_1: 8.58824
+    TOYOTA_AFRL_HIGH_1: 13.66588
     TOYOTA_AFRL_IDLE_1: 9.76
-    TOYOTA_AFRL_LOW_1: 9.76
-    TOYOTA_AFRL_MID_1_1: 17.18118
-    TOYOTA_AFRL_MID_2_1: 16.00941
-    TOYOTA_AF_LEARN_HIGH_PORT_B1: 8.82353
+    TOYOTA_AFRL_LOW_1: 2.33882
+    TOYOTA_AFRL_MID_1_1: 8.97882
+    TOYOTA_AFRL_MID_2_1: 13.66588
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 13.92157
     TOYOTA_AF_LEARN_IDLE_PORT_B1: 10
-    TOYOTA_AF_LEARN_LOW_PORT_B1: 10
-    TOYOTA_AF_LEARN_MID1_PORT_B1: 17.45098
-    TOYOTA_AF_LEARN_MID2_PORT_B1: 16.27451
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.54902
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 9.21569
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.92157
   response: |-
-    70810086210A29999AC
-    70821A9960000000000
+    70810086210A2998697
+    70821A3A30000000000
+- expected_values:
+    TOYOTA_AFRL_HIGH_1: 14.05647
+    TOYOTA_AFRL_IDLE_1: 12.10353
+    TOYOTA_AFRL_LOW_1: 2.33882
+    TOYOTA_AFRL_MID_1_1: 8.97882
+    TOYOTA_AFRL_MID_2_1: 13.66588
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 14.31373
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 12.35294
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.54902
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 9.21569
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.92157
+  response: |-
+    70810086210A29F8697
+    70821A3A40000000000
+- expected_values:
+    TOYOTA_AFRL_HIGH_1: 11.71294
+    TOYOTA_AFRL_IDLE_1: 12.10353
+    TOYOTA_AFRL_LOW_1: 4.29176
+    TOYOTA_AFRL_MID_1_1: 9.76
+    TOYOTA_AFRL_MID_2_1: 12.88471
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 11.96078
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 12.35294
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 4.5098
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 10
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.13725
+  response: |-
+    70810086210A29F8B99
+    70821A19E0000000000
