--- a/tests/test_cases/2024/commands/701.709.22162B.yaml
+++ b/tests/test_cases/2024/commands/701.709.22162B.yaml
@@ -4,6 +4,9 @@ test_cases:
     TOYOTA_ATF_THERMAL_DEGRAD_EST: 625
   response: 7090562162B0271
 - expected_values:
+    TOYOTA_ATF_THERMAL_DEGRAD_EST: 626
+  response: 7090562162B0272
+- expected_values:
     TOYOTA_ATF_THERMAL_DEGRAD_EST: 836
   response: 7090562162B0344
 - expected_values:
