Update command data for Toyota/Tundra

--- a/tests/test_cases/2000/command_support.yaml
+++ b/tests/test_cases/2000/command_support.yaml
@@ -3,6 +3,9 @@ supported_commands_by_ecu: {}
 unsupported_commands_by_ecu:
   "686A":
   - 686A.0104|p=9141-2:LOAD_PCT
+  - 686A.0105|p=9141-2:ECT
+  - 686A.0106|p=9141-2:SHRTFT1
+  - 686A.0108|p=9141-2:SHRTFT2,SHRTFT4
   - 686A.010D|p=9141-2:VSS
   - 686A.0110|p=9141-2:MAF
   - 686A.0111|p=9141-2:TP
