--- a/tests/test_cases/2022/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2022/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
@@ -59,9 +59,12 @@ test_cases:
     TOYOTA_TT_1_V2: 46
     TOYOTA_TT_2_V2: 43
     TOYOTA_TT_3_V2: 49
+    TOYOTA_TT_4_V2: 48
     TOYOTA_TT_FL_V2: 46
     TOYOTA_TT_FR_V2: 43
     TOYOTA_TT_RL_V2: 49
+    TOYOTA_TT_RR_V2: 48
+    TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210045653
     7582A21595800000000
