--- a/tests/test_cases/2018/commands/7E0.7E8.2145.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2145.yaml
@@ -17,3 +17,23 @@ test_cases:
     7E82380000000000000
     7E803410D16
     7E804411005D7
+- expected_values:
+    TOYOTA_ALL_CYLINDERS_MISFIRE_CNT: 0
+    TOYOTA_CYL1_MISFIRE_CNT: 0
+    TOYOTA_CYL2_MISFIRE_CNT: 0
+    TOYOTA_CYL3_MISFIRE_CNT: 0
+    TOYOTA_CYL4_MISFIRE_CNT: 0
+    TOYOTA_IGNITION_TRIG_CNT: 0
+    TOYOTA_MISFIRE_LOAD_V2: 0
+    TOYOTA_MISFIRE_MARGIN_V2: -128
+    TOYOTA_MISFIRE_RPM_V2: 0
+  response: |-
+    7E81015614501000000
+    7E82100000000000000
+    7E82200011400009900
+    7E82380000000000000
+    7E804410C0B22
+    7E803410D00
+    7E804411002BC
+    7E804414233BA
+    7E80441447FF2
