--- a/tests/test_cases/2018/commands/7E0.7E8.2151.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2151.yaml
@@ -504,6 +504,43 @@ test_cases:
     7E82500000000000000
     7E804410C0E6D
 - expected_values:
+    TOYOTA_AC_AMB_T: 23
+    TOYOTA_AC_FB: 0
+    TOYOTA_ELEC_LOAD_FB: 0
+    TOYOTA_ENG_SPD_START_OFF: 1118.75
+    TOYOTA_ENG_START_HESIT: 0
+    TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 86
+    TOYOTA_EOT_V3: 86
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: 0.14893
+    TOYOTA_ISC_FLOW: 7.85889
+    TOYOTA_ISC_LEARN: 6.60645
+    TOYOTA_ISC_POS: 4.63867
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: 23
+    TOYOTA_PREV_TRIP_DST: 0.01
+    TOYOTA_PREV_TRIP_EOT: 86
+    TOYOTA_PREV_TRIP_IAT: 31
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 0
+    TOYOTA_VVTOT: 88
+    TOYOTA_VVT_ADV_FAIL: 0
+  response: |-
+    7E81023615100000598
+    7E82101000180477E7E
+    7E8223F3F0000192602
+    7E82360001F807A9524
+    7E82480008000800000
+    7E82500000000000000
+    7E804410C0B09
+    7E803410D08
+    7E80441100256
+    7E80441447FF2
+- expected_values:
     TOYOTA_AC_AMB_T: 8
     TOYOTA_AC_FB: 0
     TOYOTA_ELEC_LOAD_FB: 0
