--- a/tests/test_cases/2018/commands/7C0.7C8.2141.yaml
+++ b/tests/test_cases/2018/commands/7C0.7C8.2141.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     TOYOTA_OIL_CHANGE_ODO: 804.672
   response: 7C803614105
+- expected_values:
+    TOYOTA_OIL_CHANGE_ODO: 965.6064
+  response: 7C803614106
