Update command data for Toyota/Tundra

--- a/tests/test_cases/2018/commands/7B0.7B8.2105.yaml
+++ b/tests/test_cases/2018/commands/7B0.7B8.2105.yaml
@@ -13,6 +13,12 @@ test_cases:
     7B81009610573760303
     7B82100FDE400000000
 - expected_values:
+    TOYOTA_DECEL: -1.35459
+    TOYOTA_DECEL_2: 0.07129
+  response: |-
+    7B810096105768004FE
+    7B8211503C900000000
+- expected_values:
     TOYOTA_DECEL: -0.64165
     TOYOTA_DECEL_2: 0.07129
   response: |-
