--- a/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
@@ -31,6 +31,10 @@ test_cases:
     7E822E27FEE80517FFD
     7E82303FF07FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 4.9937
+    TOYOTA_AF_LAMBDA_B1S1: 1.22673
+    TOYOTA_O2S_B1S2: 0.785
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.8519
   response: |-
     7E8101861046D979DCF
@@ -60,6 +64,10 @@ test_cases:
     7E822107FDD77D07FD8
     7E8230BFF0FFF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.00812
+    TOYOTA_AF_LAMBDA_B1S1: 0.94427
+    TOYOTA_O2S_B1S2: 0.605
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.92004
   response: |-
     7E810186104765B7979
@@ -67,6 +75,10 @@ test_cases:
     7E822797FE57B957FEE
     7E8231BFF1BFF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.38363
+    TOYOTA_AF_LAMBDA_B1S1: 1.0177
+    TOYOTA_O2S_B1S2: 0.65
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.96091
   response: |-
     7E8101861047B9D82EB
