--- a/tests/test_cases/2024/commands/7D2.7DA.221075.yaml
+++ b/tests/test_cases/2024/commands/7D2.7DA.221075.yaml
@@ -41,22 +41,34 @@ test_cases:
     7DA100B6210758FF590
     7DA21098FE88FF80000
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 122.64
     TOYOTA_FR_WHEEL_VSS: 122.48
+    TOYOTA_RL_WHEEL_VSS: 122.76
+    TOYOTA_RR_WHEEL_VSS: 122.73
   response: |-
     7DA100B621075AFD8AF
     7DA21E8AFF1AFF40000
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 123.53
     TOYOTA_FR_WHEEL_VSS: 123.59
+    TOYOTA_RL_WHEEL_VSS: 123.57
+    TOYOTA_RR_WHEEL_VSS: 123.67
   response: |-
     7DA100B621075B047B0
     7DA2141B04FB0450000
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 148.55
     TOYOTA_FR_WHEEL_VSS: 148.41
+    TOYOTA_RL_WHEEL_VSS: 148.85
+    TOYOTA_RR_WHEEL_VSS: 148.81
   response: |-
     7DA100B621075B9F9BA
     7DA2107BA21BA250000
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 149.43
     TOYOTA_FR_WHEEL_VSS: 149.5
+    TOYOTA_RL_WHEEL_VSS: 149.33
+    TOYOTA_RR_WHEEL_VSS: 149.31
   response: |-
     7DA100B621075BA66BA
     7DA215FBA53BA550000
