--- a/tests/test_cases/2025/commands/7D2.7DA.221075.yaml
+++ b/tests/test_cases/2025/commands/7D2.7DA.221075.yaml
@@ -19,7 +19,10 @@ test_cases:
     7DA100B621075848784
     7DA21A684BD849F0000
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 39.6
     TOYOTA_FR_WHEEL_VSS: 39.63
+    TOYOTA_RL_WHEEL_VSS: 40.95
+    TOYOTA_RR_WHEEL_VSS: 40.7
   response: |-
     7DA100B6210758F7B8F
     7DA21788FE68FFF0000
