--- a/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
@@ -1,9 +1,18 @@
 command_id: 7E0.7E8.2104
 test_cases:
 - expected_values:
+    TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
+  response: |-
+    2104
+    7E8101861047FF2838D
+    7E8216D81849F6D8183
+    7E8228D800B849F800B
+    7E8230FFF00FF000000
+- expected_values:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 4.9937
     TOYOTA_AF_LAMBDA_B1S1: 1.22673
+    TOYOTA_O2S_B1S2: 0.785
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.78495
   response: |-
     7E81018610464FA9DCF
@@ -80,6 +89,7 @@ test_cases:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 4.86423
     TOYOTA_AF_LAMBDA_B1S1: 1.22673
+    TOYOTA_O2S_B1S2: 0.785
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.97968
   response: |-
     7E8101861047E079DCF
@@ -167,6 +177,7 @@ test_cases:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 3.28122
     TOYOTA_AF_LAMBDA_B1S1: 0.99155
+    TOYOTA_O2S_B1S2: 0.635
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF27F8E
@@ -188,6 +199,7 @@ test_cases:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 3.30073
     TOYOTA_AF_LAMBDA_B1S1: 0.9958
+    TOYOTA_O2S_B1S2: 0.64
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF2801A
@@ -198,6 +210,7 @@ test_cases:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 3.31048
     TOYOTA_AF_LAMBDA_B1S1: 0.99738
+    TOYOTA_O2S_B1S2: 0.64
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99459
   response: |-
     7E8101861047FF2804E
