Update command data for Toyota/Tundra

--- a/tests/test_cases/2018/commands/7B0.7B8.2146.yaml
+++ b/tests/test_cases/2018/commands/7B0.7B8.2146.yaml
@@ -40,3 +40,11 @@ test_cases:
   response: |-
     7B81009614601028080
     7B82100351F00000000
+- expected_values:
+    TOYOTA_ZP_DEC: -24.71769
+    TOYOTA_ZP_DEC2: -24.71769
+    TOYOTA_ZP_YAW: 0
+    TOYOTA_ZP_YAW_RATE: 0
+  response: |-
+    7B81009614602028080
+    7B82100351F00000000
