--- a/tests/test_cases/2018/commands/7E0.7E8.2145.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2145.yaml
@@ -30,6 +30,25 @@ test_cases:
   response: |-
     7E81015614501000000
     7E82100000000000000
+    7E8220000000000CE00
+    7E82380000000000000
+    7E804410C141A
+    7E803410D0F
+    7E80441100C01
+    7E8044142337F
+- expected_values:
+    TOYOTA_ALL_CYLINDERS_MISFIRE_CNT: 0
+    TOYOTA_CYL1_MISFIRE_CNT: 0
+    TOYOTA_CYL2_MISFIRE_CNT: 0
+    TOYOTA_CYL3_MISFIRE_CNT: 0
+    TOYOTA_CYL4_MISFIRE_CNT: 0
+    TOYOTA_IGNITION_TRIG_CNT: 0
+    TOYOTA_MISFIRE_LOAD_V2: 0
+    TOYOTA_MISFIRE_MARGIN_V2: -128
+    TOYOTA_MISFIRE_RPM_V2: 0
+  response: |-
+    7E81015614501000000
+    7E82100000000000000
     7E82200011400009900
     7E82380000000000000
     7E804410C0B22
