--- a/tests/test_cases/2018/commands/7E0.7E8.2182.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2182.yaml
@@ -30,6 +30,12 @@ test_cases:
     7E803410D58
     7E80441100FB2
 - expected_values:
+    TOYOTA_ATF_PAN_T: 88.125
+    TOYOTA_ATF_TQC_T: 98.75
+  response: |-
+    7E806618280208AC0
+    7E8064100BF9FE893
+- expected_values:
     TOYOTA_ATF_PAN_T: 92.5
     TOYOTA_ATF_TQC_T: 106.25
   response: '7E806618284809240'
