Update command data for Toyota/Tundra

--- a/tests/test_cases/2024/commands/701.709.22162B.yaml
+++ b/tests/test_cases/2024/commands/701.709.22162B.yaml
@@ -10,6 +10,9 @@ test_cases:
     TOYOTA_ATF_THERMAL_DEGRAD_EST: 627
   response: 7090562162B0273
 - expected_values:
+    TOYOTA_ATF_THERMAL_DEGRAD_EST: 628
+  response: 7090562162B0274
+- expected_values:
     TOYOTA_ATF_THERMAL_DEGRAD_EST: 836
   response: 7090562162B0344
 - expected_values:
