--- a/tests/test_cases/2018/commands/7C4.2144.yaml
+++ b/tests/test_cases/2018/commands/7C4.2144.yaml
@@ -16,6 +16,18 @@ test_cases:
     7DF02010C
     7E804410C11F8
 - expected_values:
+    TOYOTA_AIR_INLET_DAMPER_TARGET_PULSE: 7
+  response: |-
+    7CC03614407
+    7DF02010C
+    7E804410C14B4
+    7DF02010D
+    7E803410D1F
+    7DF020110
+    7E804411003E6
+    7DF020144
+    7E80441447FF2
+- expected_values:
     TOYOTA_AIR_INLET_DAMPER_TARGET_PULSE: 28
   response: 7CC0361441C
 - expected_values:
