--- a/tests/test_cases/2019/commands/7E0.7E8.2151.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2151.yaml
@@ -977,7 +977,31 @@ test_cases:
     7E82480008000800080
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: 13
+    TOYOTA_AC_FB: 0
+    TOYOTA_ELEC_LOAD_FB: 0
+    TOYOTA_ENG_SPD_START_OFF: 1117.1875
+    TOYOTA_ENG_START_HESIT: 0
     TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 24
+    TOYOTA_EOT_V3: 24
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: -0.3833
+    TOYOTA_ISC_FLOW: 12.11914
+    TOYOTA_ISC_LEARN: 7.79419
+    TOYOTA_ISC_POS: 7.89642
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: 13
+    TOYOTA_PREV_TRIP_DST: 0.14
+    TOYOTA_PREV_TRIP_EOT: 24
+    TOYOTA_PREV_TRIP_IAT: 17
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 0
+    TOYOTA_VVTOT: 42
+    TOYOTA_VVT_ADV_FAIL: 0
   response: |-
     7E81023615100000596
     7E82101000E52394040
