--- a/tests/test_cases/2024/commands/700.708.221041.yaml
+++ b/tests/test_cases/2024/commands/700.708.221041.yaml
@@ -1,9 +1,9 @@
 command_id: 700.708.221041
 test_cases:
 - expected_values:
-    TOYOTA_ECT_IGN: 0.625
-    TOYOTA_ECT_INIT: 0.625
-  response: '708056210414141'
+    TOYOTA_ECT_IGN: -3.125
+    TOYOTA_ECT_INIT: -2.5
+  response: 708056210413B3C
 - expected_values:
     TOYOTA_ECT_IGN: 23.125
     TOYOTA_ECT_INIT: 94.375
