--- a/tests/test_cases/2024/commands/700.708.221627.yaml
+++ b/tests/test_cases/2024/commands/700.708.221627.yaml
@@ -1,6 +1,9 @@
 command_id: 700.708.221627
 test_cases:
 - expected_values:
+    TOYOTA_ATF_T_PAN_V3: -1.875
+  response: '708056216272620'
+- expected_values:
     TOYOTA_ATF_T_PAN_V3: 0
   response: '708056216272800'
 - expected_values:
