--- a/tests/test_cases/2019/commands/7E0.7E8.2105.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2105.yaml
@@ -9,36 +9,43 @@ test_cases:
     7E821083004E404E400
 - expected_values:
     TOYOTA_CATALYST_T_B1S1: 539.1
+    TOYOTA_CATALYST_T_B1S2: 539.1
   response: |-
     7E8100C61054E19169F
     7E821169F12D112D100
 - expected_values:
     TOYOTA_CATALYST_T_B1S1: 601.1
+    TOYOTA_CATALYST_T_B1S2: 601.1
   response: |-
     7E8100C61054E2A190B
     7E821190B14B014B000
 - expected_values:
     TOYOTA_CATALYST_T_B1S1: 335.6
+    TOYOTA_CATALYST_T_B1S2: 335.6
   response: |-
     7E8100C61054E2F0EAC
     7E8210EAC0B700B7000
 - expected_values:
     TOYOTA_CATALYST_T_B1S1: 599.7
+    TOYOTA_CATALYST_T_B1S2: 599.7
   response: |-
     7E8100C61054E2F18FD
     7E82118FD1546154600
 - expected_values:
     TOYOTA_CATALYST_T_B1S1: 433.6
+    TOYOTA_CATALYST_T_B1S2: 433.6
   response: |-
     7E8100C61054E371280
     7E82112800F3F0F3F00
 - expected_values:
     TOYOTA_CATALYST_T_B1S1: 681.2
+    TOYOTA_CATALYST_T_B1S2: 681.2
   response: |-
     7E8100C61054E401C2C
     7E8211C2C1851185100
 - expected_values:
     TOYOTA_CATALYST_T_B1S1: 455.8
+    TOYOTA_CATALYST_T_B1S2: 455.8
   response: |-
     7E8100C61054E45135E
     7E821135E100A100A00
@@ -50,6 +57,7 @@ test_cases:
     7E82116A612CF12CF00
 - expected_values:
     TOYOTA_CATALYST_T_B1S1: 65.8
+    TOYOTA_CATALYST_T_B1S2: 65.8
   response: |-
     7E8100C61054E490422
     7E821042203AF03AF00
@@ -61,6 +69,7 @@ test_cases:
     7E8210FFC0C9C0C9C00
 - expected_values:
     TOYOTA_CATALYST_T_B1S1: 457.7
+    TOYOTA_CATALYST_T_B1S2: 457.7
   response: |-
     7E8100C61054E4D1371
     7E82113710FF50FF500
@@ -72,6 +81,7 @@ test_cases:
     7E82115001041104100
 - expected_values:
     TOYOTA_CATALYST_T_B1S1: 369.6
+    TOYOTA_CATALYST_T_B1S2: 369.6
   response: |-
     7E8100C61054E561000
     7E82110000CCC0CCC00
