--- a/tests/test_cases/2025/commands/701.709.22162B.yaml
+++ b/tests/test_cases/2025/commands/701.709.22162B.yaml
@@ -22,5 +22,8 @@ test_cases:
     TOYOTA_ATF_THERMAL_DEGRAD_EST: 44
   response: 7090562162B002C
 - expected_values:
+    TOYOTA_ATF_THERMAL_DEGRAD_EST: 45
+  response: 7090562162B002D
+- expected_values:
     TOYOTA_ATF_THERMAL_DEGRAD_EST: 332
   response: 7090562162B014C
