Update command data for Toyota/Tundra

--- a/tests/test_cases/2018/commands/750.758.2116|e=2A,fc=1.yaml
+++ b/tests/test_cases/2018/commands/750.758.2116|e=2A,fc=1.yaml
@@ -41,6 +41,25 @@ test_cases:
     758F12139FF00000000
     750F1300001
 - expected_values:
+    TOYOTA_TT_1: 22
+    TOYOTA_TT_2: 31
+    TOYOTA_TT_3: 23
+    TOYOTA_TT_4: 21
+    TOYOTA_TT_5: 150
+    TOYOTA_TT_FL: 22
+    TOYOTA_TT_FL_V1: 22
+    TOYOTA_TT_FR: 31
+    TOYOTA_TT_FR_V1: 31
+    TOYOTA_TT_RL: 23
+    TOYOTA_TT_RL_V1: 23
+    TOYOTA_TT_RR: 21
+    TOYOTA_TT_RR_V1: 21
+    TOYOTA_TT_SPARE: 215
+    TOYOTA_TT_SPARE_V1: 150
+  response: |-
+    758F1100761163E473F
+    758F1213DFF00000000
+- expected_values:
     TOYOTA_TT_1: 25
     TOYOTA_TT_2: 24
     TOYOTA_TT_3: 27
