--- a/tests/test_cases/2018/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2101.yaml
@@ -1,8 +1,51 @@
 command_id: 7E0.7E8.2101
 test_cases:
 - expected_values:
+    TOYOTA_AAT: 62
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 32.15686
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 20.39216
+    TOYOTA_ATMOSPHERE_PRESSURE: 76
+    TOYOTA_CALCULATED_LOAD_7E0: 29.80392
+    TOYOTA_COOLANT_TEMP: -22
+    TOYOTA_ENGINE_RUN_TIME: 19204
+    TOYOTA_ENGINE_SPEED: 8960
+    TOYOTA_INTAKE_AIR: 28
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 68
+    TOYOTA_THROTTLE_MOTOR_DUTY: 100
+    TOYOTA_THROTTLE_SENSOR_POSITION: 20.39216
+    TOYOTA_THROTTLE_SENSOR_VOLT: 52.94118
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 15.68627
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 14901
+    TOYOTA_VEHICLE_LOAD: 0.08392
+    TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 48
+  response: |-
+    7E8101D61014C003705
+    7E821864444664C1223
+    7E82200004B04348728
+    7E8235234FF2C30343A
+    7E82435C90000000000
+- expected_values:
+    TOYOTA_AAT: 61
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 36.47059
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 20.78431
+    TOYOTA_ATMOSPHERE_PRESSURE: 88
     TOYOTA_CALCULATED_LOAD_7E0: 37.2549
+    TOYOTA_COOLANT_TEMP: -24
+    TOYOTA_ENGINE_RUN_TIME: 47108
+    TOYOTA_ENGINE_SPEED: 12822
+    TOYOTA_INTAKE_AIR: 18
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 58
+    TOYOTA_THROTTLE_MOTOR_DUTY: 98.03922
+    TOYOTA_THROTTLE_SENSOR_POSITION: 20.39216
+    TOYOTA_THROTTLE_SENSOR_VOLT: 53.33333
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 20.78431
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 45365
     TOYOTA_VEHICLE_LOAD: 0.09918
+    TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 123
   response: |-
     7E8101D61015F004105
     7E821DA3A3A65581032
