--- a/tests/test_cases/2018/commands/7E0.7E8.2151.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2151.yaml
@@ -772,6 +772,39 @@ test_cases:
     7E82480008000800080
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: 23
+    TOYOTA_AC_FB: 0
+    TOYOTA_ELEC_LOAD_FB: 0.06714
+    TOYOTA_ENG_SPD_START_OFF: 1225
+    TOYOTA_ENG_START_HESIT: 0
+    TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 24
+    TOYOTA_EOT_V3: 24
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: -1.40137
+    TOYOTA_ISC_FLOW: 14.39331
+    TOYOTA_ISC_LEARN: 6.23047
+    TOYOTA_ISC_POS: 7.44629
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: 17
+    TOYOTA_PREV_TRIP_DST: 0
+    TOYOTA_PREV_TRIP_EOT: 46
+    TOYOTA_PREV_TRIP_IAT: 27
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 0
+    TOYOTA_VVTOT: 61
+    TOYOTA_VVT_ADV_FAIL: 0
+  response: |-
+    7E81023615100000620
+    7E82101000065434056
+    7E8223F3900002E0F03
+    7E823D000D27B8493F0
+    7E82480378000800080
+    7E82500000000000000
+- expected_values:
     TOYOTA_AC_AMB_T: 11
     TOYOTA_AC_FB: 0.89844
     TOYOTA_ELEC_LOAD_FB: 0
