--- a/tests/test_cases/2018/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2018/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
@@ -57,6 +57,21 @@ test_cases:
     7582A10076130FFAEAC
     7582A21ABFF00000000
 - expected_values:
+    TOYOTA_TIRE_P_FL: 2.44828
+    TOYOTA_TIRE_P_FR: 2.60345
+    TOYOTA_TIRE_P_RL: 2.43103
+    TOYOTA_TIRE_P_RR: 2.39655
+    TOYOTA_TIRE_P_SPARE: 3.896
+    TOYOTA_TP_FL: 2.44828
+    TOYOTA_TP_FR: 2.60345
+    TOYOTA_TP_RL: 2.43103
+    TOYOTA_TP_RR: 2.39655
+    TOYOTA_TP_SPARE: 3.8
+  response: |-
+    758F110076130ABB4AA
+    750F1300001
+    758F121A8FF00000000
+- expected_values:
     TOYOTA_TIRE_P_FL: 2.53448
     TOYOTA_TIRE_P_FR: 2.53448
     TOYOTA_TIRE_P_RL: 2.53448
