Update command data for Toyota/Tundra

--- a/tests/test_cases/2018/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2018/commands/750.758.2130|e=2A,ta=2A,fc=1.yaml
@@ -15,19 +15,19 @@ test_cases:
     7582A10076130A4FFFF
     7582A21FFFF00000000
 - expected_values:
-    TOYOTA_TIRE_P_FL: 2.43103
-    TOYOTA_TIRE_P_FR: 2.44828
-    TOYOTA_TIRE_P_RL: 2.41379
-    TOYOTA_TIRE_P_RR: 2.39655
+    TOYOTA_TIRE_P_FL: 2.36207
+    TOYOTA_TIRE_P_FR: 2.36207
+    TOYOTA_TIRE_P_RL: 2.32759
+    TOYOTA_TIRE_P_RR: 2.31034
     TOYOTA_TIRE_P_SPARE: 3.896
-    TOYOTA_TP_FL: 2.43103
-    TOYOTA_TP_FR: 2.44828
-    TOYOTA_TP_RL: 2.41379
-    TOYOTA_TP_RR: 2.39655
+    TOYOTA_TP_FL: 2.36207
+    TOYOTA_TP_FR: 2.36207
+    TOYOTA_TP_RL: 2.32759
+    TOYOTA_TP_RR: 2.31034
     TOYOTA_TP_SPARE: 3.8
   response: |-
-    7582A10076130AAABA9
-    7582A21A8FF00000000
+    7582A10076130A6A6A4
+    7582A21A3FF00000000
 - expected_values:
     TOYOTA_TIRE_P_FL: 2.63793
     TOYOTA_TIRE_P_FR: 2.56897
@@ -56,6 +56,21 @@ test_cases:
   response: |-
     7582A10076130FFAEAC
     7582A21ABFF00000000
+- expected_values:
+    TOYOTA_TIRE_P_FL: 2.37931
+    TOYOTA_TIRE_P_FR: 2.37931
+    TOYOTA_TIRE_P_RL: 2.34483
+    TOYOTA_TIRE_P_RR: 2.34483
+    TOYOTA_TIRE_P_SPARE: 3.896
+    TOYOTA_TP_FL: 2.37931
+    TOYOTA_TP_FR: 2.37931
+    TOYOTA_TP_RL: 2.34483
+    TOYOTA_TP_RR: 2.34483
+    TOYOTA_TP_SPARE: 3.8
+  response: |-
+    758F110076130A7A7A5
+    750F1300001
+    758F121A5FF00000000
 - expected_values:
     TOYOTA_TIRE_P_FL: 2.44828
     TOYOTA_TIRE_P_FR: 2.60345
