--- a/tests/test_cases/2018/commands/7B0.7B8.2105.yaml
+++ b/tests/test_cases/2018/commands/7B0.7B8.2105.yaml
@@ -40,8 +40,14 @@ test_cases:
     TOYOTA_DECEL: -0.21388
     TOYOTA_DECEL_2: 0.07129
   response: |-
-    7B8100961057E8004C8
-    7B82100034000000000
+    7B8100961057E8002C6
+    7B82100024900000000
+- expected_values:
+    TOYOTA_DECEL: -0.07129
+    TOYOTA_DECEL_2: -1.49718
+  response: |-
+    7B8100961057F750409
+    7B8210002E600000000
 - expected_values:
     TOYOTA_DECEL: -0.07129
     TOYOTA_DECEL_2: 0.07129
