--- a/tests/test_cases/2018/commands/7E0.7E8.2128.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2128.yaml
@@ -41,3 +41,11 @@ test_cases:
     7E804410C154A
     7E803410D0F
     7E80441100C70
+- expected_values:
+    TOYOTA_ODO: 291646
+  response: |-
+    7E805612804733E
+    7E804410C1220
+    7E803410D14
+    7E804411004BA
+    7E80441423617
