--- a/tests/test_cases/2018/commands/7E0.7E8.2151.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2151.yaml
@@ -199,6 +199,40 @@ test_cases:
     7E82480448000800000
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: 15
+    TOYOTA_AC_FB: 0
+    TOYOTA_ELEC_LOAD_FB: 0
+    TOYOTA_ENG_SPD_START_OFF: 786.71875
+    TOYOTA_ENG_START_HESIT: 0
+    TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 25
+    TOYOTA_EOT_V3: 25
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: 0.1001
+    TOYOTA_ISC_FLOW: 14.71313
+    TOYOTA_ISC_LEARN: 6.41846
+    TOYOTA_ISC_POS: 7.56073
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: 20
+    TOYOTA_PREV_TRIP_DST: 0.39
+    TOYOTA_PREV_TRIP_EOT: 83
+    TOYOTA_PREV_TRIP_IAT: 31
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 0.08392
+    TOYOTA_VVTOT: 88
+    TOYOTA_VVT_ADV_FAIL: 0
+  response: |-
+    7E810236151000003EF
+    7E8210100278047417B
+    7E822373C000B2F1503
+    7E823DF00008052948A
+    7E82480008000813A00
+    7E82500000000000000
+    7E804410C1230
+- expected_values:
     TOYOTA_AC_AMB_T: 35
     TOYOTA_AC_FB: 1.14746
     TOYOTA_ELEC_LOAD_FB: 0.07202
