--- a/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2104.yaml
@@ -91,6 +91,10 @@ test_cases:
     7E8220F7FFC7F037FFB
     7E823A0FFA7FF000000
 - expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.2861
+    TOYOTA_AF_LAMBDA_B1S1: 0.99313
+    TOYOTA_O2S_B1S2: 0.635
     TOYOTA_TARGET_AIR_FUEL_RATIO: 0.99174
   response: |-
     7E8101861047F947FC2
