--- a/tests/test_cases/2018/commands/750.758.2116|e=2A,fc=1.yaml
+++ b/tests/test_cases/2018/commands/750.758.2116|e=2A,fc=1.yaml
@@ -21,6 +21,25 @@ test_cases:
     750F1300001
     758F12133FF00000000
 - expected_values:
+    TOYOTA_TT_1: 15
+    TOYOTA_TT_2: 16
+    TOYOTA_TT_3: 16
+    TOYOTA_TT_4: 16
+    TOYOTA_TT_5: 150
+    TOYOTA_TT_FL: 15
+    TOYOTA_TT_FL_V1: 15
+    TOYOTA_TT_FR: 16
+    TOYOTA_TT_FR_V1: 16
+    TOYOTA_TT_RL: 16
+    TOYOTA_TT_RL_V1: 16
+    TOYOTA_TT_RR: 16
+    TOYOTA_TT_RR_V1: 16
+    TOYOTA_TT_SPARE: 215
+    TOYOTA_TT_SPARE_V1: 150
+  response: |-
+    758F110076116373838
+    758F12138FF00000000
+- expected_values:
     TOYOTA_TT_1: 16
     TOYOTA_TT_2: 16
     TOYOTA_TT_3: 17
