--- a/tests/test_cases/2018/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2101.yaml
@@ -1,6 +1,15 @@
 command_id: 7E0.7E8.2101
 test_cases:
 - expected_values:
+    TOYOTA_CALCULATED_LOAD_7E0: 21.56863
+    TOYOTA_VEHICLE_LOAD: 0.05646
+  response: |-
+    7E8101D610137002503
+    7E821D24444666412A7
+    7E82221003C02308335
+    7E8235D31FF2C4E348E
+    7E82435B60000000000
+- expected_values:
     TOYOTA_CALCULATED_LOAD_7E0: 29.80392
     TOYOTA_VEHICLE_LOAD: 0.08392
   response: |-
