--- a/tests/test_cases/2018/commands/7C4.2144.yaml
+++ b/tests/test_cases/2018/commands/7C4.2144.yaml
@@ -14,6 +14,14 @@ test_cases:
   response: |-
     7CC03614407
     7DF02010C
+    7E804410C1019
+    7DF020110
+    7E8044110041E
+- expected_values:
+    TOYOTA_AIR_INLET_DAMPER_TARGET_PULSE: 7
+  response: |-
+    7CC03614407
+    7DF02010C
     7E804410C11F8
 - expected_values:
     TOYOTA_AIR_INLET_DAMPER_TARGET_PULSE: 7
