Update command data for Toyota/Tundra

--- a/tests/test_cases/2024/commands/700.708.221087.yaml
+++ b/tests/test_cases/2024/commands/700.708.221087.yaml
@@ -10,5 +10,5 @@ test_cases:
     TOYOTA_INTAKE_VVT_CHANGE_ANGLE_BANK_1: 4.98953
   response: 7080562108701FF
 - expected_values:
-    TOYOTA_INTAKE_VVT_CHANGE_ANGLE_BANK_1: 50.10036
-  response: 70805621087140B
+    TOYOTA_INTAKE_VVT_CHANGE_ANGLE_BANK_1: 50.04177
+  response: '708056210871405'
