Update command data for Toyota/Tundra

--- a/tests/test_cases/2024/commands/700.708.2210A2.yaml
+++ b/tests/test_cases/2024/commands/700.708.2210A2.yaml
@@ -43,6 +43,20 @@ test_cases:
     70810086210A28E7999
     708219DA30000000000
 - expected_values:
+    TOYOTA_AFRL_HIGH_1: 10.54118
+    TOYOTA_AFRL_IDLE_1: 5.46353
+    TOYOTA_AFRL_LOW_1: 0.77647
+    TOYOTA_AFRL_MID_1_1: 7.80706
+    TOYOTA_AFRL_MID_2_1: 11.71294
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 10.78431
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 5.68627
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 0.98039
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 8.03922
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 11.96078
+  response: |-
+    70810086210A28E8294
+    708219E9B0000000000
+- expected_values:
     TOYOTA_AFRL_HIGH_1: 12.10353
     TOYOTA_AFRL_IDLE_1: 5.46353
     TOYOTA_AFRL_LOW_1: 4.29176
