--- a/tests/test_cases/2024/commands/7D2.7DA.221075.yaml
+++ b/tests/test_cases/2024/commands/7D2.7DA.221075.yaml
@@ -25,7 +25,10 @@ test_cases:
     7DA100B62107580F980
     7DA21FD8100810E0000
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 2.05
     TOYOTA_FR_WHEEL_VSS: 2.54
+    TOYOTA_RL_WHEEL_VSS: 1.55
+    TOYOTA_RR_WHEEL_VSS: 2.13
   response: |-
     7DA100B62107580FE80
     7DA21CD80D5809B0000
