--- a/tests/test_cases/2024/commands/700.708.221627.yaml
+++ b/tests/test_cases/2024/commands/700.708.221627.yaml
@@ -10,5 +10,5 @@ test_cases:
     TOYOTA_ATF_T_PAN_V3: 1.875
   response: '7080562162729E0'
 - expected_values:
-    TOYOTA_ATF_T_PAN_V3: 81.875
-  response: '7080562162779E0'
+    TOYOTA_ATF_T_PAN_V3: 85
+  response: 708056216277D00
