--- a/tests/test_cases/2025/commands/7D2.7DA.22106C|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7D2.7DA.22106C|fc=1.yaml
@@ -6,6 +6,7 @@ test_cases:
   response: 7DA0662106C468045
 - expected_values:
     TOYOTA_HVBAT_SOC_MAX: 36.5
+    TOYOTA_HVBAT_SOC_MIN: 31.5
   response: 7DA0662106C49493F
 - expected_values:
     TOYOTA_HVBAT_SOC_MAX: 71
