Update command data for Toyota/Tundra

--- a/tests/test_cases/2024/commands/700.708.221002.yaml
+++ b/tests/test_cases/2024/commands/700.708.221002.yaml
@@ -10,5 +10,5 @@ test_cases:
     TOYOTA_12V_V: 12.49997
   response: '708056210022800'
 - expected_values:
-    TOYOTA_12V_V: 14.71188
-  response: 708056210022F14
+    TOYOTA_12V_V: 15.14156
+  response: '708056210023074'
