Update command data for Toyota/Tundra

--- a/tests/test_cases/2018/commands/7C0.7C8.2141.yaml
+++ b/tests/test_cases/2018/commands/7C0.7C8.2141.yaml
@@ -15,3 +15,6 @@ test_cases:
 - expected_values:
     TOYOTA_OIL_CHANGE_ODO: 1287.4752
   response: 7C803614108
+- expected_values:
+    TOYOTA_OIL_CHANGE_ODO: 1770.2784
+  response: 7C80361410B
