--- a/tests/test_cases/2018/commands/7E0.7E8.2105.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2105.yaml
@@ -1,6 +1,13 @@
 command_id: 7E0.7E8.2105
 test_cases:
 - expected_values:
+    TOYOTA_CATALYST_T_B1S1: 316.1
+    TOYOTA_CATALYST_T_B1S2: 316.1
+  response: |-
+    7E8100C61054F970DE9
+    7E8210DE90ACA0ACA00
+    7E804410C1744
+- expected_values:
     TOYOTA_CATALYST_T_B1S1: 278.9
     TOYOTA_CATALYST_T_B1S2: 278.9
   response: |-
