--- a/tests/test_cases/2018/commands/7E0.7E8.2125.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2125.yaml
@@ -20,6 +20,31 @@ test_cases:
     TOYOTA_TC_TERMINAL: 0
   response: |-
     7E8100A612500000010
+    7E82100000080000000
+    7E804410C178F
+    7E803410D1A
+    7E80441100F4A
+    7E80441447FF2
+- expected_values:
+    TOYOTA_CRUISE_CONTROL_LIVE_BRAKE_CANCEL_SWITCH: 0
+    TOYOTA_ELECTRICAL_LOAD_SIGNAL_1: 0
+    TOYOTA_ELECTRICAL_LOAD_SIGNAL_2: 0
+    TOYOTA_NEUTRAL_POSITION_SW_SIGNAL: 0
+    TOYOTA_PATTERN_SWITCH_PWR_M: 0
+    TOYOTA_POWER_STEERING_SIGNAL: 0
+    TOYOTA_SHIFT_SW_STATUS_D_RANGE: 1
+    TOYOTA_SHIFT_SW_STATUS_N_RANGE: 0
+    TOYOTA_SHIFT_SW_STATUS_P_RANGE: 0
+    TOYOTA_SHIFT_SW_STATUS_R_RANGE: 0
+    TOYOTA_SPORTS_MODE_SELECTION_SW: 0
+    TOYOTA_SPORTS_SHIFT_DOWN_SW: 0
+    TOYOTA_SPORTS_SHIFT_UP_SW: 0
+    TOYOTA_STARTER_CONTROL: 0
+    TOYOTA_STARTER_SIGNAL: 0
+    TOYOTA_STOP_LIGHT_SWITCH: 0
+    TOYOTA_TC_TERMINAL: 0
+  response: |-
+    7E8100A612500000010
     7E82100008080000000
     7E8064100BF9FE893
 - expected_values:
