--- a/tests/test_cases/2018/commands/7E0.7E8.2151.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2151.yaml
@@ -839,6 +839,43 @@ test_cases:
     7E82480378000800080
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: 18
+    TOYOTA_AC_FB: 0
+    TOYOTA_ELEC_LOAD_FB: 0.00488
+    TOYOTA_ENG_SPD_START_OFF: 1225
+    TOYOTA_ENG_START_HESIT: 0
+    TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 25
+    TOYOTA_EOT_V3: 25
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: 0.1001
+    TOYOTA_ISC_FLOW: 13.53394
+    TOYOTA_ISC_LEARN: 6.14136
+    TOYOTA_ISC_POS: 7.13348
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: 20
+    TOYOTA_PREV_TRIP_DST: 0.41
+    TOYOTA_PREV_TRIP_EOT: 86
+    TOYOTA_PREV_TRIP_IAT: 27
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 6.81305
+    TOYOTA_VVTOT: 88
+    TOYOTA_VVT_ADV_FAIL: 0
+  response: |-
+    7E81023615100000620
+    7E8210100298043417E
+    7E8223A3C037D2B4F03
+    7E823A70000805293A7
+    7E82480048000800000
+    7E82500000000000000
+    7E804410C1608
+    7E803410D16
+    7E80441100E8B
+    7E80441447FF2
+- expected_values:
     TOYOTA_AC_AMB_T: 11
     TOYOTA_AC_FB: 0.89844
     TOYOTA_ELEC_LOAD_FB: 0
