Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/7D2.7DA.22106C|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7D2.7DA.22106C|fc=1.yaml
@@ -12,7 +12,9 @@ test_cases:
   response: 7DA0662106C808E80
 - expected_values:
     TOYOTA_HVBAT_SOC_MAX: 71
+    TOYOTA_HVBAT_SOC_MIN: 64
   response: 7DA0662106C8E8E80
 - expected_values:
     TOYOTA_HVBAT_SOC_MAX: 71
+    TOYOTA_HVBAT_SOC_MIN: 70
   response: 7DA0662106C8E8E8C
