--- a/tests/test_cases/2025/commands/7D2.7DA.221075.yaml
+++ b/tests/test_cases/2025/commands/7D2.7DA.221075.yaml
@@ -1,7 +1,10 @@
 command_id: 7D2.7DA.221075
 test_cases:
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 0
     TOYOTA_FR_WHEEL_VSS: 0
+    TOYOTA_RL_WHEEL_VSS: 0
+    TOYOTA_RR_WHEEL_VSS: 0
   response: |-
     7DA100B621075800080
     7DA2100800080000000
@@ -21,7 +24,10 @@ test_cases:
     7DA100B6210758F7B8F
     7DA21788FE68FFF0000
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 79.07
     TOYOTA_FR_WHEEL_VSS: 79.35
+    TOYOTA_RL_WHEEL_VSS: 79.2
+    TOYOTA_RR_WHEEL_VSS: 79.41
   response: |-
     7DA100B6210759EFF9E
     7DA21E39F059EF00000
@@ -36,7 +42,10 @@ test_cases:
     7DA100B621075A953A9
     7DA216FA98AA98B0000
 - expected_values:
+    TOYOTA_FL_WHEEL_VSS: 115.65
     TOYOTA_FR_WHEEL_VSS: 115.78
+    TOYOTA_RL_WHEEL_VSS: 116.78
+    TOYOTA_RR_WHEEL_VSS: 116.75
   response: |-
     7DA100B621075AD3AAD
     7DA212DAD9BAD9E0000
