Update command data for Toyota/Tundra

--- a/tests/test_cases/2024/commands/700.708.22108F.yaml
+++ b/tests/test_cases/2024/commands/700.708.22108F.yaml
@@ -7,5 +7,8 @@ test_cases:
     TOYOTA_EXHAUST_VVT_OVER_ADV_LEARN_B1: 117.47066
   response: 7080562108F2EFD
 - expected_values:
+    TOYOTA_EXHAUST_VVT_OVER_ADV_LEARN_B1: 117.50972
+  response: 7080562108F2F01
+- expected_values:
     TOYOTA_EXHAUST_VVT_OVER_ADV_LEARN_B1: 120.01949
   response: 7080562108F3002
