--- a/tests/test_cases/2024/commands/700.708.221019.yaml
+++ b/tests/test_cases/2024/commands/700.708.221019.yaml
@@ -2,7 +2,7 @@ command_id: 700.708.221019
 test_cases:
 - expected_values:
     TOYOTA_INJECTION: DIRECT
-  response: '7080762101901138000'
+  response: 70807621019010C8000
 - expected_values:
     TOYOTA_INJECTION: DIRECT
   response: 70807621019015A8B24
