Update command data for Toyota/Tundra

--- a/tests/test_cases/2024/commands/700.708.221059.yaml
+++ b/tests/test_cases/2024/commands/700.708.221059.yaml
@@ -19,6 +19,11 @@ test_cases:
     708100A6210592A5328
     7082151000F00000000
 - expected_values:
+    TOYOTA_ACCEL_PEDAL: 0
+  response: |-
+    708100A6210592B542A
+    7082154000000000000
+- expected_values:
     TOYOTA_ACCEL_PEDAL: 9
   response: |-
     708100A621059477028
