--- a/tests/test_cases/2024/commands/700.708.221621.yaml
+++ b/tests/test_cases/2024/commands/700.708.221621.yaml
@@ -27,3 +27,6 @@ test_cases:
 - expected_values:
     TOYOTA_GEAR_V2: 9
   response: '7080462162109'
+- expected_values:
+    TOYOTA_GEAR_V2: 10
+  response: 708046216210A
